chore: adjust project name
- 修改專案名稱

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.travel"
+        applicationId "com.example.wordle_1A2B"
         minSdk 30
         targetSdk 31
         versionCode 1
