feat: build app common structure
- 整理專案架構
- 新建 Base 繼承

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/NoActionBar">
         <activity
-            android:name="com.example.wordle_1A2B.activity.view.MainActivity"
+            android:name="com.example.wordle_1A2B.ui.component.activity.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
