--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
     kotlinOptions {
         jvmTarget = '11'
     }
+
     bundle {
         language {
             // Specifies that the app bundle should not support
@@ -43,7 +46,12 @@ android {
             enableSplit = false
         }
     }
-    buildToolsVersion '30.0.2'
+
+    kapt {
+        generateStubs = true
+    }
+
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
@@ -65,6 +73,7 @@ dependencies {
     // Retrofit and Gson
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
@@ -87,4 +96,10 @@ dependencies {
 
     //Gif lottie
     implementation 'com.airbnb.android:lottie:5.2.0'
+
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.33'
+    implementation 'com.google.dagger:dagger-android-support:2.16'
+    kapt 'com.google.dagger:dagger-compiler:2.33'
+    kapt 'com.google.dagger:dagger-android-processor:2.16'
 }
