--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '11'
+        freeCompilerArgs += ["-Xjvm-default=all",]
     }
 
     bundle {
@@ -46,11 +47,6 @@ android {
             enableSplit = false
         }
     }
-
-    kapt {
-        generateStubs = true
-    }
-
     buildToolsVersion '30.0.3'
 }
 
@@ -60,7 +56,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.fragment:fragment:1.3.2'
+    implementation 'androidx.fragment:fragment-ktx:1.5.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -98,8 +94,13 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.2.0'
 
     //Dagger
-    implementation 'com.google.dagger:dagger:2.33'
-    implementation 'com.google.dagger:dagger-android-support:2.16'
-    kapt 'com.google.dagger:dagger-compiler:2.33'
+    implementation 'com.google.dagger:dagger:2.16'
+    implementation "com.google.dagger:dagger-android-support:2.16"
+    kapt 'com.google.dagger:dagger-compiler:2.16'
     kapt 'com.google.dagger:dagger-android-processor:2.16'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.16'
+}
+
+kapt {
+    generateStubs = true
 }
