--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,9 +78,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
 
     // Android Room
-    implementation "androidx.room:room-runtime:2.1.0-rc01"
-    implementation "androidx.room:room-ktx:2.1.0-rc01"
-    kapt "androidx.room:room-compiler:2.1.0-rc01"
+    implementation "androidx.room:room-runtime:2.4.0-alpha03"
+    implementation "androidx.room:room-ktx:2.4.0-alpha03"
+    kapt "androidx.room:room-compiler:2.4.0-alpha03"
 
     // Android Navigation Architecture
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.0"
