--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.wordle_1A2B"
+        applicationId "com.example.app_1A2B"
         minSdk 30
         targetSdk 31
         versionCode 1
