--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "wordle_1A2B"
+rootProject.name = "app_1A2B"
 include ':app'
